<resources>
    <string name="app_name">Vaccine</string>

    <!-- Buttons -->
    <string name="entrar_btn">Entrar</string>
    <string name="cadastrar_btn">Cadastre-se</string>
    <string name="login_facebook_btn">Login Facebook</string>
    <string name="salvar_btn">Salvar</string>

    <!-- Labels de campos -->
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="numero_carteira">Número Carteira</string>
    <string name="nome">Nome</string>
    <string name="data_nascimento">Data Nascimento</string>

    <!-- Shared Preferences -->
    <string name="preference_file_key">vaccine_shared_prefs</string>
    <string name="usuario_numero_carteira_key">usuario_numero_carteira_key</string>
    <string name="usuario_nome_key">usuario_nome_key</string>
    <string name="usuario_data_nascimento_key">usuario_data_nascimento_key</string>

    <!-- Mensagens Genéricas -->
    <string name="erro_generico">
        Não foi possível concluir com sucesso este procedimento.
        Por favor tente novamente mais tarde!
    </string>

    <!-- Menu -->
    <string name="minha_carteira">Minha carteira</string>
    <string name="meus_dependentes">Meus dependentes</string>
    <string name="novo_dependente">Novo dependente</string>
    <string name="logout">Sair</string>

    <!-- Títulos de Telas -->
    <string name="title_activity_maps">Postos de Saúde</string>
    <string name="title_activity_meus_dependentes">Meus dependentes</string>
    <string name="title_activity_minha_carteira">Minha carteira</string>
    <string name="title_activity_usuario_cadastro">Cadastro de usuário</string>
    <string name="title_activity_dependente_cadastro">Cadastro de dependente</string>
    <string name="title_activity_login">Entre</string>
</resources>
