<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/appNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/appNameTxt"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margem_padrao" />

    <EditText
        android:id="@+id/loginEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/loginTxt"
        android:layout_marginTop="@dimen/margem_menor"
        android:layout_marginLeft="@dimen/margem_padrao"
        android:layout_marginRight="@dimen/margem_padrao" />

    <TextView
        android:id="@+id/senhaTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/loginEdt"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margem_padrao" />

    <EditText
        android:id="@+id/senhaEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/senhaTxt"
        android:layout_marginTop="@dimen/margem_menor"
        android:layout_marginLeft="@dimen/margem_padrao"
        android:layout_marginRight="@dimen/margem_padrao" />

    <Button
        android:id="@+id/entrarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar_btn"
        android:onClick="entrarBtnClick"
        app:layout_constraintTop_toBottomOf="@+id/senhaEdt"
        android:layout_marginTop="@dimen/margem_padrao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margem_padrao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/cadastrarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar_btn"
            android:onClick="cadastrarBtnClick"
            android:layout_marginRight="@dimen/margem_padrao" />

        <Button
            android:id="@+id/loginFacebookBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_facebook_btn"
            android:onClick="loginFacebookBtnClick"
            android:layout_marginLeft="@dimen/margem_padrao"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>